--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,3 +1,3 @@
 <ul>
-  <li *ngFor ="let user of userInfoData">{{user.Project}}</li>
+  <li *ngFor ="let user of userInfoData"><span>{{user.Project}}</span> <span> {{user.Email}} </span></li>
 </ul>
